<resources>
    <string name="app_name">Serbian Words Trainer</string>

    <!-- General -->
    <string name="button_save">Сохранить</string>
    <string name="button_cancel">Отменить</string>
    <string name="button_add">Добавить</string>
    <string name="button_delete">Удалить</string>
    <string name="text_changes_saved">Изменения сохранены</string>

    <!-- Main Activity -->
    <string name="main_button_to_categories">К категориям</string>
    <string name="main_button_to_training">Тренировка</string>
    <string name="main_button_to_dictionary">Словарь</string>
    <string name="main_button_to_experimental">Тестирование</string>
    <string name="main_button_create_backup">Создать бекап</string>
    <string name="main_button_load_backup">Загрузить бекап</string>

    <!-- Category list fragment -->
    <string name="category_fragment_add_new_pair_button_description">Кнопка для добавления новой пары слов</string>
    <string name="category_list_fragment_delete_category_info_message">Вы действительно желаете удалить данную категорию? Удаление категории приведет к удалению всех слов внутри данной категории. Желаете продолжить?</string>
    <string name="category_list_fragment_delete_category_complete_message">Категория удалена</string>

    <!-- Word pairs list fragment -->
    <string name="word_pairs_list_fragment_delete_complete">Пара удалена</string>

    <!-- Add new pair fragment -->
    <string name="add_new_pair_fragment_russian_word">Русское слово</string>
    <string name="add_new_pair_fragment_serbian_word">Сербское слово</string>
    <string name="add_new_pair_fragment_comment">Комментарий</string>
    <string name="add_new_pair_fragment_pronunciation">Произношение</string>
    <string name="add_new_pair_fragment_learn_level_of">Уровень изучения слова: %s из %s</string>
    <string name="add_new_pair_fragment_add_new_category">Введите название категории</string>
    <string name="add_new_pair_fragment_empty_category_name">Пустое название категории</string>
    <string name="add_new_pair_fragment_can_not_save_pair">Нельзя сохранить пару</string>
    <string name="add_new_pair_fragment_pair_exists">Пара уже существует</string>
    <string name="add_new_pair_fragment_pair_added">Пара добавлена</string>
    <string name="add_new_pair_fragment_data_is_not_correct">Данные неверны</string>
    <string name="add_new_pair_fragment_button_start_learn">Начать изучение</string>
    <string name="add_new_pair_fragment_button_learn_again">Изучить снова</string>
    <string name="add_new_pair_fragment_button_stop_learn">Остановить изучение</string>

    <!-- Chose From Variants fragment -->
    <string name="chose_from_variants_fragment_play_sound">Прослушать слово</string>

    <!-- Training Result Variants fragment -->
    <string name="training_result_fragment_complete_training">Завершить</string>

    <string name="answer_button_description">Кнопка для ответа</string>
    <string name="answer_text_field">Ответ</string>
    <string name="next_exercise_button">Далее</string>
    <string name="skip_exercise_button">Пропустить ></string>
    <string name="answer_activity_correct">Правильно</string>
    <string name="answer_activity_incorrect">Неправильно</string>
    <string name="exercise_results">Результаты %s / %s</string>

    <string name="categories_list">Список категорий</string>
    <string name="start_learn_button">Начать</string>
    <string name="reset_learn_button">Заменить слова</string>
    <string name="start_float_training_button">Начать потоковую тренировку</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dictionary">DictionaryActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>