<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.dictionay.AddNewPairFragment">

    <EditText
        android:id="@+id/russian_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_new_pair_fragment_russian_word"
        android:autofillHints="@string/add_new_pair_fragment_russian_word"
        android:inputType="textAutoComplete"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/serbian_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_new_pair_fragment_serbian_word"
        android:autofillHints="@string/add_new_pair_fragment_serbian_word"
        android:inputType="textAutoComplete"
        app:layout_constraintTop_toBottomOf="@id/russian_word"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_new_pair_fragment_comment"
        android:autofillHints="@string/add_new_pair_fragment_comment"
        android:inputType="textAutoComplete"
        app:layout_constraintTop_toBottomOf="@id/serbian_word"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Spinner
        android:id="@+id/categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/comment"
        app:layout_constraintBottom_toBottomOf="@id/add_new_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/add_new_category"
        />

    <View
        android:id="@+id/add_new_category"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_add_new"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/comment" />

    <EditText
        android:id="@+id/pronunciation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_new_pair_fragment_pronunciation"
        android:autofillHints="@string/add_new_pair_fragment_pronunciation"
        android:inputType="textAutoComplete"
        app:layout_constraintTop_toBottomOf="@id/add_new_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:id="@+id/play_word"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_play_sound"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_new_category" />

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        app:layout_constraintTop_toBottomOf="@id/pronunciation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>